...
                    )
                }
                .keyboardShortcut("f", modifiers: .command)
            }

            CommandGroup(after: .newItem) {
                Button("Move to Archive") {
                    NotificationCenter.default.post(name: .microficheMoveSelectionToArchive, object: nil)
                }
                .keyboardShortcut("a", modifiers: [.command, .shift])

                Divider()
                Button("Clear Image Cache") {
...
